# code-quality-checker

./: .gitignore  CHANGELOG.md  README.md  deploy.sh  install.sh  pyproject.toml  requirements.txt
code_quality_checker/: __init__.py  cli.py
code_quality_checker/checker/: __init__.py  base.py  config.py  orchestrator.py
code_quality_checker/cleaners/: __init__.py  whitespace_cleaner.py
code_quality_checker/tools/: __init__.py  base.py  flake8_tool.py  pylint_tool.py  radon_tool.py
code_quality_checker/utils/: __init__.py  console.py  file_utils.py  report.py
examples/: agent.cqc.yaml  django.cqc.yaml  standard.cqc.yaml
